src/ApiGateways/OrigoApiGateway/OrigoApiGateway/manifests/test/ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: origoapigateway-ingressroute
  namespace: test
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  routes:
  - match: Host(`origov2test.mytos.no`) && PathPrefix(`/origoapi`)
    kind: Rule
    services:
    - name: origoapigateway
      port: 8090
  tls:
    certResolver: letsencrypt
